syntax = "proto3";

package outcomes_service.v1;

option go_package = "gateway/gen/go/outcomes_service/v1";

import "outcomes_service/v1/models.proto";

message CreateDriverRequest {
  string user_id = 1;
  string title = 2;
  string outcome_id = 3;
  optional float position = 4;
}

message GetDriverRequest {
  string id = 1;
}

message UpdateDriverRequest {
  string id = 1;
  optional string title = 2;

}

message ListDriversRequest {
  string user_id = 1;
  int32 page_size = 3;
  string page_token = 4;
}

message ListDriversResponse {
  repeated Driver data = 1;
  string next_page_token = 2;
  int32 total_count = 3;
  int32 page_size = 4;
  int32 current_page = 5;
  int32 total_pages = 6;
}

message DeleteDriverRequest {
  string id = 1;
}

message DeleteDriverResponse {
  bool success = 1;
}

service DriversService {

  rpc CreateDriver(CreateDriverRequest) returns (Driver);

  rpc GetDriver(GetDriverRequest) returns (Driver);

  rpc ListDrivers(ListDriversRequest) returns (ListDriversResponse);

  rpc UpdateDriver(UpdateDriverRequest) returns (Driver);

  rpc DeleteDriver(DeleteDriverRequest) returns (DeleteDriverResponse);
}