syntax = "proto3";

package outcomes_service.v1;

option go_package = "gateway/gen/go/outcomes_service/v1";

import "google/protobuf/timestamp.proto";
import "outcomes_service/v1/models.proto";



message CreateOutcomeRequest {
  string user_id = 1;
  string title = 2;
  string why_it_matters = 3;
  double success_metric_value = 4;
  string success_metric_unit = 5;
  google.protobuf.Timestamp deadline = 6;
}

message GetOutcomeRequest {
  string id = 1;
}

message UpdateOutcomeRequest {
  string id = 1;
  optional string title = 2;
  optional string why_it_matters = 3;
  optional double success_metric_value = 4;
  optional string success_metric_unit = 5;
  optional google.protobuf.Timestamp deadline = 6;
  optional OutcomeStatus status = 7;
}

message ListOutcomesRequest {
  string user_id = 1;
  optional OutcomeStatus status = 2;
  int32 page_size = 3;
  string page_token = 4;
}

message ListOutcomesResponse {
  repeated Outcome data = 1;
  string next_page_token = 2;
  int32 total_count = 3;
  int32 page_size = 4;
  int32 current_page = 5;
  int32 total_pages = 6;
}

message DeleteOutcomeRequest {
  string id = 1;
}

message DeleteOutcomeResponse {
  bool success = 1;
}


service OutcomesService {
  rpc CreateOutcome(CreateOutcomeRequest) returns (Outcome);

  rpc GetOutcome(GetOutcomeRequest) returns (Outcome);

  rpc ListOutcomes(ListOutcomesRequest) returns (ListOutcomesResponse);

  rpc UpdateOutcome(UpdateOutcomeRequest) returns (Outcome);

  rpc DeleteOutcome(DeleteOutcomeRequest) returns (DeleteOutcomeResponse);

}